--- a/app/views/posts/check.html.erb
+++ b/app/views/posts/check.html.erb
@@ -44,7 +44,7 @@
       </tr>
       <tr>
         <td class="table_header">調査<br/>箇所</td>
-        <td colspan="4">
+        <td colspan="4" style="vertical-align: middle;">
           <% if @point.room_name == "その他" %>
             <%= @point.room_name_other %>
           <% else %>
