--- a/app/views/investigations/pages/_sonsyochosasyo_photo_book_row.html.erb
+++ b/app/views/investigations/pages/_sonsyochosasyo_photo_book_row.html.erb
@@ -25,7 +25,7 @@
         <tr class="body">
           <td>
             <% if damage.width.present? && damage.height.present? %>
-              <%= damage.width %>&nbsp;cm&nbsp;x&nbsp;<%= damage.height %>&nbsp;cm
+              A=<%= damage.width %>&nbsp;cm&nbsp;x&nbsp;<%= damage.height %>&nbsp;cm
             <% end %>
           </td>
         </tr>
@@ -38,11 +38,11 @@
         </tr>
         <tr class="body">
           <td>
-            <% if damage.amimejyo == true %>網目状<% end %>  
-            <% if damage.zencho == true %>全長<% end %>
-            <% if damage.zenshu == true %>全周<% end %>
+            <% if damage.amimejyo == true %>L=網目状<% end %>  
+            <% if damage.zencho == true %>L=全長<% end %>
+            <% if damage.zenshu == true %>L=全周<% end %>
             <% if damage.length.present? %>
-              L&nbsp;=&nbsp;<%= damage.length %>&nbsp;cm
+              L&nbsp;=&nbsp;<%= damage.length %>
             <% end %>
           </td>
         </tr>
