--- a/app/views/investigations/pages/_sonsyochosasyo.html.erb
+++ b/app/views/investigations/pages/_sonsyochosasyo.html.erb
@@ -80,13 +80,13 @@
             <td style="width:45%;" colspan="3"><%= survey_type_2 %>調査</td>
           </tr>
           <tr>
-            <td>各部仕上材</td>
-            <td>写真番号</td>
-            <td>損傷の状況</td>
-            <td>備考</td>
-            <td>写真番号</td>
-            <td>損傷の状況</td>
-            <td>備考</td>        
+            <td width="6%">各部仕上材</td>
+            <td width="6%">写真番号</td>
+            <td width="25%">損傷の状況</td>
+            <td width="10%">備考</td>
+            <td width="6%">写真番号</td>
+            <td width="25%">損傷の状況</td>
+            <td width="10%">備考</td>        
           </tr>
           
           <% num_exist = 0 %><!-- 存在したデータ数 -->
@@ -193,7 +193,7 @@
 
               <% sonsyos[start..stop].each do |sonsyo| %>
                 <tr>
-                  <td class="text-center"><%= sonsyo.room_name %></td>
+                  <td  width="10%" class="text-center"><%= sonsyo.room_name %></td>
                   <td style="width:6%;" class="text-center">－</td>
                   <td style="width:6%;" class="text-center"><%= sonsyo.number %></td>
                   
@@ -206,7 +206,7 @@
                       damage = sonsyo.damages.find_by(survey_type: "after")
                     end
                   %>  
-                  <td>
+                  <td width="25%">
                     <%= damage.tekiyo %><br/>
                     <% if damage.wide.present? %>W&nbsp;=&nbsp;<%= damage.wide %>&nbsp;mm&nbsp;&nbsp;&nbsp;&nbsp;<% end %>
                     <% if damage.length.present? %>L&nbsp;=&nbsp;<%= damage.length %>&nbsp;&nbsp;&nbsp;&nbsp;<% end %>
@@ -214,7 +214,7 @@
                     <% if damage.width.present? && damage.height.present? %>A&nbsp;=&nbsp;<%= damage.width %>&nbsp;x&nbsp;<%= damage.height %>&nbsp;cm<% end %>
                     <br/>
                   </td>
-                  <td><%= damage.comment %></td><!-- 備考 -->
+                  <td width="10%"><%= damage.comment %></td><!-- 備考 -->
 
                   <td style="width:6%;" class="text-center"><%= sonsyo.number %></td>
                   <% 
@@ -226,7 +226,7 @@
                       damage = sonsyo.damages.find_by(survey_type: "after")
                     end
                   %>
-                  <td>
+                  <td width="25%">
                     <%= damage.tekiyo %><br/>
                     <% if damage.wide.present? %>W&nbsp;=&nbsp;<%= damage.wide %>&nbsp;mm&nbsp;&nbsp;&nbsp;&nbsp;<% end %>
                     <% if damage.length.present? %>L&nbsp;=&nbsp;<%= damage.length %>&nbsp;&nbsp;&nbsp;&nbsp;<% end %>
@@ -235,7 +235,7 @@
                     <% if damage.height.present? %>Height&nbsp;=&nbsp;<%= damage.height %>&nbsp;cm&nbsp;&nbsp;&nbsp;&nbsp;<% end %>
                     <br/>
                   </td>
-                  <td><%= damage.comment %></td><!-- 備考 -->
+                  <td width="10%"><%= damage.comment %></td><!-- 備考 -->
                 </tr>
                 
                 <% num_exist+=1 %>
