--- a/app/views/investigations/pages/_tatemonosuijyunsokuryokekkahyo_photo_book_row.html.erb
+++ b/app/views/investigations/pages/_tatemonosuijyunsokuryokekkahyo_photo_book_row.html.erb
@@ -43,13 +43,19 @@
   border-top: none !important;
   border-left: none !important;
   border-right: none !important;
-  border-bottom: solid 2px !important;  
+  border-bottom: solid 2px !important;
+  padding: 8px 4px 0px 4px;
+  vertical-align: bottom;
+  font-size: 12pt;
 }
 .photo_book .book table .body td {
   border-top: none !important;
   border-left: none !important;
   border-right: none !important;
-  border-bottom: dotted !important;
+  border-bottom: solid 1px !important;
+  padding: 8px 4px 0px 4px;
+  vertical-align: bottom;
+  font-size: 8pt;
 }
 /* セルの最小heightを設定 */
 .photo_book .book table .body td:first-child:before {
